GNOME Bugzilla – Bug 656297
Crash when signing certificate
Last modified: 2011-09-06 14:04:05 UTC
Starting program: /usr/bin/seahorse [Thread debugging using libthread_db enabled] [New Thread 0x7fffe25b6700 (LWP 3179)] Program received signal SIGSEGV, Segmentation fault. g_type_check_instance (type_instance=0x1) at gtype.c:4057 4057 gtype.c: No such file or directory. in gtype.c
+ Trace 228065
Thread 1 (Thread 0x7ffff7f9c980 (LWP 3174))
Inferior 1 [process 3174] will be killed. The crash is present both when I signed the certificate as well when I cancel the operation
Thanks. Fixed in seahorse master. commit bd364996e61709247c36c448f881b103462bc137 Author: Stef Walter <stefw@collabora.co.uk> Date: Tue Sep 6 16:03:03 2011 +0200 Don't fire events when disposing of SeahorseSet https://bugzilla.gnome.org/show_bug.cgi?id=656297