Don't fire events when disposing of SeahorseSet

https://bugzilla.gnome.org/show_bug.cgi?id=656297